romana-install/roles/romana/postinstall/kubernetes/master/files/demo/namespace-tenant-a.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: tenant-a
  labels:
    name: tenant-a
