romana-install/roles/romana/postinstall/kubernetes/master/files/demo/pod-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-frontend
  namespace: tenant-a
  labels:
    app: nginx
    segment: frontend
spec:
  containers:
  - name: nginx
    image: rstarmer/nginx-curl
    ports:
    - containerPort: 80
