romana-install/roles/romana/postinstall/kubernetes/master/files/demo/romana-np-frontend-to-backend.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: pol1
spec:
 podSelector:
  matchLabels:
   role: backend
 ingress:
 - from:
   - podSelector:
      matchLabels:
       role: frontend
   ports:
    - protocol: tcp
      port: 80
